--- a/style.css
+++ b/style.css
@@ -18,15 +18,16 @@ background: purple;
 .warpper h1{
     font-size: 36px;
     text-align: center;
+    color: #fff;
 }
-.warpper Input-box {
+.warpper input-box {
     position: relative;
     width: 100%;
     height: 50px;
     margin: 30px 0;
     
 }
-.Input-box input{
+.input-box input {
     width: 100%;
     height: 100%;
     background: transparent;
@@ -34,15 +35,25 @@ background: purple;
     outline: none;
     border: 2px solid rgba(255, 255, 255, .2);
     border-radius: 40px;
+    font-size: 16px;
+    color: #fff;
+    padding: 20px 45px 20px 20px;
 }
-.Input-box input::placeholder {
+.input-box input::placeholder {
     color: #fff;
 }
-.Input-box i{
+.input-box i {
     position: absolute;
     right: 20px;
     top: 50%;
-    transform: translate(-50%);
+    transform: translateY(-50%);
     font-size: 20px;
 
+}
+.warpper.remember-forgot{
+    display: flex;
+    justify-content: space-between;
+    font-size: 14.5px;
+    margin: -15px 0 15px;
+    
 }
