--- a/style.css
+++ b/style.css
@@ -9,18 +9,27 @@ body{
     justify-content: center;
     align-items:center ;
     min-height: 100vh;
-    background:seagreen;
+    background:url(BG.jpg)no-repeat;
+    background-position: center;
+
 }
 .warpper {
 width: 420px;
-background: purple;
+padding: 30px 40px;
+border-radius: 10px;
+background: transparent;
+border: 2px solid rgba(255, 255, 255, .2);
+backdrop-filter: blur(20px);
+box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+color: #fff;
+
 }
 .warpper h1{
     font-size: 36px;
     text-align: center;
     color: #fff;
 }
-.warpper input-box {
+.warpper .input-box {
     position: relative;
     width: 100%;
     height: 50px;
@@ -50,10 +59,50 @@ background: purple;
     font-size: 20px;
 
 }
-.warpper.remember-forgot{
+.warpper .remember-forgot {
     display: flex;
     justify-content: space-between;
     font-size: 14.5px;
     margin: -15px 0 15px;
+    color: #fff;
     
+}
+.remember-forgot label input{
+    accent-color: #fff;
+    margin-right: 3px;
+}
+
+.remember-forgot a {
+    color: #fff;
+    text-decoration: none;
+}
+.remember-forgot a:hover {
+    text-decoration: underline;
+}
+.warpper .btn{
+    width: 100%;
+    height: 45px;
+    background: #fff;
+    border: none;
+    outline: none;
+    border-radius: 40px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, -1);
+    cursor: pointer;
+    font-size: 16px;
+    color: #333;
+    font-weight: 600;
+}
+.warpper .register-link{
+   font-size: 14.5px;
+   text-align: center;
+   margin-top: 20px ; 
+
+}
+.register-link P a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+}
+.register-link P a:hover{
+    text-decoration: underline;
 }
